--- a/BSPTreeProject/BSPTreeProject/BSPTreeProject.vcxproj
+++ b/BSPTreeProject/BSPTreeProject/BSPTreeProject.vcxproj
@@ -127,7 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BSPTree.cpp" />
     <ClCompile Include="BSPTreeProject.cpp" />
+    <ClCompile Include="Line2D.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Wall.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BSPTree.h" />
+    <ClInclude Include="Line2D.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
